Modularize the project
Include the module-info.java to group the packages into a single module.
Doing so, the goal was to fix an issue due to the fact that the javafx sdk wasn't installed
localy rather used as a maven dependency.