@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.pyhtag</groupId>
@@ -12,11 +11,10 @@
 	<name>gifme</name>
 	<!-- FIXME change it to the project's website -->
 	<url>http://www.example.com</url>
-
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.source>13</maven.compiler.source>
-		<maven.compiler.target>13</maven.compiler.target>
+		<maven.compiler.source>14</maven.compiler.source>
+		<maven.compiler.target>${maven.compiler.source}</maven.compiler.target>
 	</properties>
 
 	<dependencies>
@@ -29,13 +27,12 @@
 		<dependency>
 			<groupId>org.openjfx</groupId>
 			<artifactId>javafx-controls</artifactId>
-			<version>13</version>
+			<version>14</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.openjfx/javafx-fxml -->
 		<dependency>
 			<groupId>org.openjfx</groupId>
 			<artifactId>javafx-fxml</artifactId>
-			<version>13</version>
+			<version>14</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
 		<dependency>
@@ -98,9 +95,22 @@
 				<plugin>
 					<groupId>org.openjfx</groupId>
 					<artifactId>javafx-maven-plugin</artifactId>
-					<version>0.0.3</version>
+					<version>0.0.4</version>
 					<configuration>
-						<mainClass>App</mainClass>
+						<mainClass>com.pyhtag/com.pyhtag.App</mainClass>
+						<options>
+							<option>--add-exports</option>
+							<option>javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix</option>
+							<option>--add-exports</option>
+							<option>javafx.controls/com.sun.javafx.scene.control=com.jfoenix</option>
+							<!-- <option>-add-opens</option>
+							<option>javafx.base/com.sun.javafx.binding=com.jfoenix</option>
+							<option>-add-opens</option>
+							<option>javafx.base/com.sun.javafx.event=com.jfoenix</option>
+							<option>-add-opens</option>
+							<option>javafx.graphics/com.sun.javafx.stage=com.jfoenix</option> -->
+						</options>
+						<!-- https://www.youtube.com/watch?v=-DZ4BAwqaAY -->
 					</configuration>
 				</plugin>
 			</plugins>
